# c-Qt_WindDataVisualization

./: README.md  xlsx_to_csv.py  功能完成情况.md
WindDataVisualization.app/Contents/MacOS/: WindDataVisualization
data/: angle.csv  angle.xlsx  wind_speed.csv
final/: CMakeLists.txt
final/.claude/: settings.local.json
final/inc/: MainWindow.h  PPIWidget.h  ProfileWidget.h  loader.hpp
final/src/: MainWindow.cpp  PPIWidget.cpp  ProfileWidget.cpp  loader.cpp
